// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tile 1`] = `
<div
  className=""
>
  <h3
    className="relative w-full text-zinc-950 pb-4 text-lg opacity-90"
  >
    Test Title
  </h3>
  <h4
    className="relative w-full text-zinc-950 pb-4 text-sm opacity-50"
  >
    Test Subtitle
  </h4>
  Tile
</div>
`;

exports[`Tile with class name 1`] = `
<div
  className=" test-class"
>
  <h3
    className="relative w-full text-zinc-950 pb-4 text-lg opacity-90"
  >
    Test Title
  </h3>
  <h4
    className="relative w-full text-zinc-950 pb-4 text-sm opacity-50"
  >
    Test Subtitle
  </h4>
  Tile with class name
</div>
`;
